scarlcompile/src/y.output
   0  $accept : program $end

   1  program : statement_list

   2  statement_list : statement
   3                 | statement statement_list

   4  statement : variable_definition_statement
   5            | function_definition_statement
   6            | class_definition_statement
   7            | constant_definition_statement
   8            | variable_declaration_statement

   9  block_statement : LBRACE statement_list_block_level RBRACE

  10  statement_list_block_level : statement_block_level
  11                             | statement_block_level statement_list_block_level

  12  statement_block_level : variable_definition_statement
  13                        | block_statement
  14                        | variable_set_statement
  15                        | function_invocation_statement
  16                        | if_block_statement
  17                        | while_block_statement
  18                        | return_statement
  19                        | method_invocation_statement
  20                        | variable_declaration_statement
  21                        | delete_statement
  22                        | constant_definition_statement

  23  type_declarator : any_type IDENTIFIER

  24  any_type : array_type
  25           | pointer_type
  26           | primitive_type
  27           | user_type
  28           | device_type

  29  array_type : any_type LBRACKET arithmetic_expression RBRACKET

  30  pointer_type : any_type POINTER

  31  user_type : IDENTIFIER

  32  variable_definition_statement : type_declarator EQ expression SEMICOLON

  33  variable_declaration_statement : type_declarator SEMICOLON

  34  delete_statement : DELETE IDENTIFIER SEMICOLON

  35  constant_definition_statement : CONSTANT type_declarator EQ expression SEMICOLON

  36  class_definition_statement : class_declarator class_body

  37  class_declarator : class_name
  38                   | class_name class_extending

  39  class_name : CLASS IDENTIFIER

  40  class_extending : EXTENDS IDENTIFIER

  41  class_body : LBRACE class_attribute_list RBRACE

  42  class_attribute_list : class_attribute
  43                       | class_attribute class_attribute_list

  44  class_attribute : function_definition_statement
  45                  | variable_declaration_statement

  46  function_definition_statement : any_type IDENTIFIER LPAREN formal_parameter_list RPAREN block_statement

  47  variable_set_statement : IDENTIFIER EQ expression SEMICOLON
  48                         | class_attribute_identifier EQ expression SEMICOLON

  49  return_statement : RETURN expression SEMICOLON
  50                   | RETURN SEMICOLON

  51  function_invocation : IDENTIFIER LPAREN parameter_list RPAREN

  52  function_invocation_statement : function_invocation SEMICOLON

  53  method_invocation : class_attribute_identifier LPAREN parameter_list RPAREN

  54  method_invocation_statement : method_invocation SEMICOLON

  55  class_attribute_identifier : IDENTIFIER DOT IDENTIFIER
  56                             | IDENTIFIER DOT class_attribute_identifier

  57  if_block_statement : IF LPAREN expression RPAREN block_statement
  58                     | IF LPAREN expression RPAREN block_statement ELSE block_statement

  59  while_block_statement : WHILE LPAREN expression RPAREN block_statement

  60  formal_parameter_list : type_declarator
  61                        | type_declarator COMMA formal_parameter_list
  62                        |

  63  parameter_list : expression
  64                 | expression COMMA parameter_list
  65                 |

  66  expression : logical_expression
  67             | allocation_expression

  68  allocation_expression : ALLOCATE allocation_invocation

  69  allocation_invocation : primitive_type LPAREN parameter_list RPAREN
  70                        | user_type LPAREN parameter_list RPAREN

  71  logical_expression : logical_and_expression
  72                     | logical_expression OR logical_and_expression

  73  logical_and_expression : equality_expression
  74                         | logical_and_expression AND equality_expression

  75  equality_expression : relational_expression
  76                      | equality_expression DBL_EQ relational_expression
  77                      | equality_expression NOT_EQ relational_expression

  78  relational_expression : bool_expression
  79                        | relational_expression GTR bool_expression
  80                        | relational_expression LESS bool_expression
  81                        | relational_expression GTR_EQ bool_expression
  82                        | relational_expression LESS_EQ bool_expression

  83  bool_expression : arithmetic_expression
  84                  | BANG arithmetic_expression

  85  arithmetic_expression : arithmetic_factor
  86                        | arithmetic_expression PLUS arithmetic_factor
  87                        | arithmetic_expression MINUS arithmetic_factor

  88  arithmetic_factor : arithmetic_unary
  89                    | arithmetic_factor STAR arithmetic_unary
  90                    | arithmetic_factor SLASH arithmetic_unary

  91  arithmetic_unary : unit
  92                   | MINUS arithmetic_unary
  93                   | LPAREN arithmetic_expression RPAREN

  94  unit : IDENTIFIER
  95       | class_attribute_identifier
  96       | integer_value
  97       | char_value
  98       | bool_value
  99       | function_invocation
 100       | array_accessor_unit
 101       | method_invocation
 102       | dereferenced_pointer
 103       | array_value

 104  array_accessor_unit : IDENTIFIER LBRACKET arithmetic_expression RBRACKET

 105  dereferenced_pointer : DEREF IDENTIFIER

 106  array_value : STRING_LITERAL
 107              | array_initializer

 108  array_initializer : LBRACE parameter_list RBRACE

 109  integer_value : DECIMAL
 110                | OCTAL
 111                | HEX
 112                | BINARY

 113  char_value : CHAR_LITERAL

 114  bool_value : TRUE
 115             | FALSE

 116  primitive_type : BOOL
 117                 | INT
 118                 | CHAR
 119                 | VOID
 120                 | BYTE

 121  device_type : LIGHT_ACTUATOR
 122              | SERVO_ACTUATOR
 123              | SOUND_SENSOR
 124              | LIGHT_SENSOR
 125              | DISTANCE_SENSOR
 126              | TEMPERATURE_SENSOR
 127              | SERIAL_SENSOR
 128              | SERIAL_ACTUATOR

state 0
	$accept : . program $end  (0)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	LIGHT_ACTUATOR  shift 6
	SERVO_ACTUATOR  shift 7
	SOUND_SENSOR  shift 8
	LIGHT_SENSOR  shift 9
	DISTANCE_SENSOR  shift 10
	TEMPERATURE_SENSOR  shift 11
	CONSTANT  shift 12
	CLASS  shift 13
	SERIAL_SENSOR  shift 14
	SERIAL_ACTUATOR  shift 15
	BYTE  shift 16
	.  error

	program  goto 17
	statement_list  goto 18
	statement  goto 19
	variable_definition_statement  goto 20
	function_definition_statement  goto 21
	class_definition_statement  goto 22
	constant_definition_statement  goto 23
	variable_declaration_statement  goto 24
	type_declarator  goto 25
	any_type  goto 26
	array_type  goto 27
	pointer_type  goto 28
	primitive_type  goto 29
	user_type  goto 30
	device_type  goto 31
	class_declarator  goto 32
	class_name  goto 33


state 1
	user_type : IDENTIFIER .  (31)

	.  reduce 31


state 2
	primitive_type : BOOL .  (116)

	.  reduce 116


state 3
	primitive_type : INT .  (117)

	.  reduce 117


state 4
	primitive_type : CHAR .  (118)

	.  reduce 118


state 5
	primitive_type : VOID .  (119)

	.  reduce 119


state 6
	device_type : LIGHT_ACTUATOR .  (121)

	.  reduce 121


state 7
	device_type : SERVO_ACTUATOR .  (122)

	.  reduce 122


state 8
	device_type : SOUND_SENSOR .  (123)

	.  reduce 123


state 9
	device_type : LIGHT_SENSOR .  (124)

	.  reduce 124


state 10
	device_type : DISTANCE_SENSOR .  (125)

	.  reduce 125


state 11
	device_type : TEMPERATURE_SENSOR .  (126)

	.  reduce 126


state 12
	constant_definition_statement : CONSTANT . type_declarator EQ expression SEMICOLON  (35)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	LIGHT_ACTUATOR  shift 6
	SERVO_ACTUATOR  shift 7
	SOUND_SENSOR  shift 8
	LIGHT_SENSOR  shift 9
	DISTANCE_SENSOR  shift 10
	TEMPERATURE_SENSOR  shift 11
	SERIAL_SENSOR  shift 14
	SERIAL_ACTUATOR  shift 15
	BYTE  shift 16
	.  error

	type_declarator  goto 34
	any_type  goto 35
	array_type  goto 27
	pointer_type  goto 28
	primitive_type  goto 29
	user_type  goto 30
	device_type  goto 31


state 13
	class_name : CLASS . IDENTIFIER  (39)

	IDENTIFIER  shift 36
	.  error


state 14
	device_type : SERIAL_SENSOR .  (127)

	.  reduce 127


state 15
	device_type : SERIAL_ACTUATOR .  (128)

	.  reduce 128


state 16
	primitive_type : BYTE .  (120)

	.  reduce 120


state 17
	$accept : program . $end  (0)

	$end  accept


state 18
	program : statement_list .  (1)

	.  reduce 1


state 19
	statement_list : statement .  (2)
	statement_list : statement . statement_list  (3)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	LIGHT_ACTUATOR  shift 6
	SERVO_ACTUATOR  shift 7
	SOUND_SENSOR  shift 8
	LIGHT_SENSOR  shift 9
	DISTANCE_SENSOR  shift 10
	TEMPERATURE_SENSOR  shift 11
	CONSTANT  shift 12
	CLASS  shift 13
	SERIAL_SENSOR  shift 14
	SERIAL_ACTUATOR  shift 15
	BYTE  shift 16
	$end  reduce 2

	statement_list  goto 37
	statement  goto 19
	variable_definition_statement  goto 20
	function_definition_statement  goto 21
	class_definition_statement  goto 22
	constant_definition_statement  goto 23
	variable_declaration_statement  goto 24
	type_declarator  goto 25
	any_type  goto 26
	array_type  goto 27
	pointer_type  goto 28
	primitive_type  goto 29
	user_type  goto 30
	device_type  goto 31
	class_declarator  goto 32
	class_name  goto 33


state 20
	statement : variable_definition_statement .  (4)

	.  reduce 4


state 21
	statement : function_definition_statement .  (5)

	.  reduce 5


state 22
	statement : class_definition_statement .  (6)

	.  reduce 6


state 23
	statement : constant_definition_statement .  (7)

	.  reduce 7


state 24
	statement : variable_declaration_statement .  (8)

	.  reduce 8


state 25
	variable_definition_statement : type_declarator . EQ expression SEMICOLON  (32)
	variable_declaration_statement : type_declarator . SEMICOLON  (33)

	EQ  shift 38
	SEMICOLON  shift 39
	.  error


state 26
	type_declarator : any_type . IDENTIFIER  (23)
	array_type : any_type . LBRACKET arithmetic_expression RBRACKET  (29)
	pointer_type : any_type . POINTER  (30)
	function_definition_statement : any_type . IDENTIFIER LPAREN formal_parameter_list RPAREN block_statement  (46)

	IDENTIFIER  shift 40
	POINTER  shift 41
	LBRACKET  shift 42
	.  error


state 27
	any_type : array_type .  (24)

	.  reduce 24


state 28
	any_type : pointer_type .  (25)

	.  reduce 25


state 29
	any_type : primitive_type .  (26)

	.  reduce 26


state 30
	any_type : user_type .  (27)

	.  reduce 27


state 31
	any_type : device_type .  (28)

	.  reduce 28


state 32
	class_definition_statement : class_declarator . class_body  (36)

	LBRACE  shift 43
	.  error

	class_body  goto 44


state 33
	class_declarator : class_name .  (37)
	class_declarator : class_name . class_extending  (38)

	EXTENDS  shift 45
	LBRACE  reduce 37

	class_extending  goto 46


state 34
	constant_definition_statement : CONSTANT type_declarator . EQ expression SEMICOLON  (35)

	EQ  shift 47
	.  error


state 35
	type_declarator : any_type . IDENTIFIER  (23)
	array_type : any_type . LBRACKET arithmetic_expression RBRACKET  (29)
	pointer_type : any_type . POINTER  (30)

	IDENTIFIER  shift 48
	POINTER  shift 41
	LBRACKET  shift 42
	.  error


state 36
	class_name : CLASS IDENTIFIER .  (39)

	.  reduce 39


state 37
	statement_list : statement statement_list .  (3)

	.  reduce 3


state 38
	variable_definition_statement : type_declarator EQ . expression SEMICOLON  (32)

	IDENTIFIER  shift 49
	MINUS  shift 50
	BANG  shift 51
	LPAREN  shift 52
	LBRACE  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	ALLOCATE  shift 60
	DEREF  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	.  error

	arithmetic_expression  goto 64
	expression  goto 65
	class_attribute_identifier  goto 66
	function_invocation  goto 67
	method_invocation  goto 68
	logical_expression  goto 69
	allocation_expression  goto 70
	logical_and_expression  goto 71
	equality_expression  goto 72
	relational_expression  goto 73
	bool_expression  goto 74
	arithmetic_factor  goto 75
	arithmetic_unary  goto 76
	unit  goto 77
	integer_value  goto 78
	char_value  goto 79
	bool_value  goto 80
	array_accessor_unit  goto 81
	dereferenced_pointer  goto 82
	array_value  goto 83
	array_initializer  goto 84


state 39
	variable_declaration_statement : type_declarator SEMICOLON .  (33)

	.  reduce 33


state 40
	type_declarator : any_type IDENTIFIER .  (23)
	function_definition_statement : any_type IDENTIFIER . LPAREN formal_parameter_list RPAREN block_statement  (46)

	LPAREN  shift 85
	EQ  reduce 23
	SEMICOLON  reduce 23


state 41
	pointer_type : any_type POINTER .  (30)

	.  reduce 30


state 42
	array_type : any_type LBRACKET . arithmetic_expression RBRACKET  (29)

	IDENTIFIER  shift 49
	MINUS  shift 50
	LPAREN  shift 52
	LBRACE  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	.  error

	arithmetic_expression  goto 86
	class_attribute_identifier  goto 66
	function_invocation  goto 67
	method_invocation  goto 68
	arithmetic_factor  goto 75
	arithmetic_unary  goto 76
	unit  goto 77
	integer_value  goto 78
	char_value  goto 79
	bool_value  goto 80
	array_accessor_unit  goto 81
	dereferenced_pointer  goto 82
	array_value  goto 83
	array_initializer  goto 84


state 43
	class_body : LBRACE . class_attribute_list RBRACE  (41)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	LIGHT_ACTUATOR  shift 6
	SERVO_ACTUATOR  shift 7
	SOUND_SENSOR  shift 8
	LIGHT_SENSOR  shift 9
	DISTANCE_SENSOR  shift 10
	TEMPERATURE_SENSOR  shift 11
	SERIAL_SENSOR  shift 14
	SERIAL_ACTUATOR  shift 15
	BYTE  shift 16
	.  error

	function_definition_statement  goto 87
	variable_declaration_statement  goto 88
	type_declarator  goto 89
	any_type  goto 26
	array_type  goto 27
	pointer_type  goto 28
	primitive_type  goto 29
	user_type  goto 30
	device_type  goto 31
	class_attribute_list  goto 90
	class_attribute  goto 91


state 44
	class_definition_statement : class_declarator class_body .  (36)

	.  reduce 36


state 45
	class_extending : EXTENDS . IDENTIFIER  (40)

	IDENTIFIER  shift 92
	.  error


state 46
	class_declarator : class_name class_extending .  (38)

	.  reduce 38


state 47
	constant_definition_statement : CONSTANT type_declarator EQ . expression SEMICOLON  (35)

	IDENTIFIER  shift 49
	MINUS  shift 50
	BANG  shift 51
	LPAREN  shift 52
	LBRACE  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	ALLOCATE  shift 60
	DEREF  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	.  error

	arithmetic_expression  goto 64
	expression  goto 93
	class_attribute_identifier  goto 66
	function_invocation  goto 67
	method_invocation  goto 68
	logical_expression  goto 69
	allocation_expression  goto 70
	logical_and_expression  goto 71
	equality_expression  goto 72
	relational_expression  goto 73
	bool_expression  goto 74
	arithmetic_factor  goto 75
	arithmetic_unary  goto 76
	unit  goto 77
	integer_value  goto 78
	char_value  goto 79
	bool_value  goto 80
	array_accessor_unit  goto 81
	dereferenced_pointer  goto 82
	array_value  goto 83
	array_initializer  goto 84


state 48
	type_declarator : any_type IDENTIFIER .  (23)

	.  reduce 23


state 49
	function_invocation : IDENTIFIER . LPAREN parameter_list RPAREN  (51)
	class_attribute_identifier : IDENTIFIER . DOT IDENTIFIER  (55)
	class_attribute_identifier : IDENTIFIER . DOT class_attribute_identifier  (56)
	unit : IDENTIFIER .  (94)
	array_accessor_unit : IDENTIFIER . LBRACKET arithmetic_expression RBRACKET  (104)

	LPAREN  shift 94
	LBRACKET  shift 95
	DOT  shift 96
	PLUS  reduce 94
	MINUS  reduce 94
	STAR  reduce 94
	SLASH  reduce 94
	RPAREN  reduce 94
	GTR  reduce 94
	LESS  reduce 94
	GTR_EQ  reduce 94
	LESS_EQ  reduce 94
	DBL_EQ  reduce 94
	NOT_EQ  reduce 94
	OR  reduce 94
	AND  reduce 94
	COMMA  reduce 94
	SEMICOLON  reduce 94
	RBRACE  reduce 94
	RBRACKET  reduce 94


state 50
	arithmetic_unary : MINUS . arithmetic_unary  (92)

	IDENTIFIER  shift 49
	MINUS  shift 50
	LPAREN  shift 52
	LBRACE  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	.  error

	class_attribute_identifier  goto 66
	function_invocation  goto 67
	method_invocation  goto 68
	arithmetic_unary  goto 97
	unit  goto 77
	integer_value  goto 78
	char_value  goto 79
	bool_value  goto 80
	array_accessor_unit  goto 81
	dereferenced_pointer  goto 82
	array_value  goto 83
	array_initializer  goto 84


state 51
	bool_expression : BANG . arithmetic_expression  (84)

	IDENTIFIER  shift 49
	MINUS  shift 50
	LPAREN  shift 52
	LBRACE  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	.  error

	arithmetic_expression  goto 98
	class_attribute_identifier  goto 66
	function_invocation  goto 67
	method_invocation  goto 68
	arithmetic_factor  goto 75
	arithmetic_unary  goto 76
	unit  goto 77
	integer_value  goto 78
	char_value  goto 79
	bool_value  goto 80
	array_accessor_unit  goto 81
	dereferenced_pointer  goto 82
	array_value  goto 83
	array_initializer  goto 84


state 52
	arithmetic_unary : LPAREN . arithmetic_expression RPAREN  (93)

	IDENTIFIER  shift 49
	MINUS  shift 50
	LPAREN  shift 52
	LBRACE  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	.  error

	arithmetic_expression  goto 99
	class_attribute_identifier  goto 66
	function_invocation  goto 67
	method_invocation  goto 68
	arithmetic_factor  goto 75
	arithmetic_unary  goto 76
	unit  goto 77
	integer_value  goto 78
	char_value  goto 79
	bool_value  goto 80
	array_accessor_unit  goto 81
	dereferenced_pointer  goto 82
	array_value  goto 83
	array_initializer  goto 84


state 53
	array_initializer : LBRACE . parameter_list RBRACE  (108)
	parameter_list : .  (65)

	IDENTIFIER  shift 49
	MINUS  shift 50
	BANG  shift 51
	LPAREN  shift 52
	LBRACE  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	ALLOCATE  shift 60
	DEREF  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	RBRACE  reduce 65

	arithmetic_expression  goto 64
	expression  goto 100
	class_attribute_identifier  goto 66
	function_invocation  goto 67
	parameter_list  goto 101
	method_invocation  goto 68
	logical_expression  goto 69
	allocation_expression  goto 70
	logical_and_expression  goto 71
	equality_expression  goto 72
	relational_expression  goto 73
	bool_expression  goto 74
	arithmetic_factor  goto 75
	arithmetic_unary  goto 76
	unit  goto 77
	integer_value  goto 78
	char_value  goto 79
	bool_value  goto 80
	array_accessor_unit  goto 81
	dereferenced_pointer  goto 82
	array_value  goto 83
	array_initializer  goto 84


state 54
	integer_value : DECIMAL .  (109)

	.  reduce 109


state 55
	integer_value : OCTAL .  (110)

	.  reduce 110


state 56
	integer_value : HEX .  (111)

	.  reduce 111


state 57
	integer_value : BINARY .  (112)

	.  reduce 112


state 58
	bool_value : TRUE .  (114)

	.  reduce 114


state 59
	bool_value : FALSE .  (115)

	.  reduce 115


state 60
	allocation_expression : ALLOCATE . allocation_invocation  (68)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	BYTE  shift 16
	.  error

	primitive_type  goto 102
	user_type  goto 103
	allocation_invocation  goto 104


state 61
	dereferenced_pointer : DEREF . IDENTIFIER  (105)

	IDENTIFIER  shift 105
	.  error


state 62
	array_value : STRING_LITERAL .  (106)

	.  reduce 106


state 63
	char_value : CHAR_LITERAL .  (113)

	.  reduce 113


state 64
	bool_expression : arithmetic_expression .  (83)
	arithmetic_expression : arithmetic_expression . PLUS arithmetic_factor  (86)
	arithmetic_expression : arithmetic_expression . MINUS arithmetic_factor  (87)

	PLUS  shift 106
	MINUS  shift 107
	RPAREN  reduce 83
	GTR  reduce 83
	LESS  reduce 83
	GTR_EQ  reduce 83
	LESS_EQ  reduce 83
	DBL_EQ  reduce 83
	NOT_EQ  reduce 83
	OR  reduce 83
	AND  reduce 83
	COMMA  reduce 83
	SEMICOLON  reduce 83
	RBRACE  reduce 83


state 65
	variable_definition_statement : type_declarator EQ expression . SEMICOLON  (32)

	SEMICOLON  shift 108
	.  error


state 66
	method_invocation : class_attribute_identifier . LPAREN parameter_list RPAREN  (53)
	unit : class_attribute_identifier .  (95)

	LPAREN  shift 109
	PLUS  reduce 95
	MINUS  reduce 95
	STAR  reduce 95
	SLASH  reduce 95
	RPAREN  reduce 95
	GTR  reduce 95
	LESS  reduce 95
	GTR_EQ  reduce 95
	LESS_EQ  reduce 95
	DBL_EQ  reduce 95
	NOT_EQ  reduce 95
	OR  reduce 95
	AND  reduce 95
	COMMA  reduce 95
	SEMICOLON  reduce 95
	RBRACE  reduce 95
	RBRACKET  reduce 95


state 67
	unit : function_invocation .  (99)

	.  reduce 99


state 68
	unit : method_invocation .  (101)

	.  reduce 101


state 69
	expression : logical_expression .  (66)
	logical_expression : logical_expression . OR logical_and_expression  (72)

	OR  shift 110
	RPAREN  reduce 66
	COMMA  reduce 66
	SEMICOLON  reduce 66
	RBRACE  reduce 66


state 70
	expression : allocation_expression .  (67)

	.  reduce 67


state 71
	logical_expression : logical_and_expression .  (71)
	logical_and_expression : logical_and_expression . AND equality_expression  (74)

	AND  shift 111
	RPAREN  reduce 71
	OR  reduce 71
	COMMA  reduce 71
	SEMICOLON  reduce 71
	RBRACE  reduce 71


state 72
	logical_and_expression : equality_expression .  (73)
	equality_expression : equality_expression . DBL_EQ relational_expression  (76)
	equality_expression : equality_expression . NOT_EQ relational_expression  (77)

	DBL_EQ  shift 112
	NOT_EQ  shift 113
	RPAREN  reduce 73
	OR  reduce 73
	AND  reduce 73
	COMMA  reduce 73
	SEMICOLON  reduce 73
	RBRACE  reduce 73


state 73
	equality_expression : relational_expression .  (75)
	relational_expression : relational_expression . GTR bool_expression  (79)
	relational_expression : relational_expression . LESS bool_expression  (80)
	relational_expression : relational_expression . GTR_EQ bool_expression  (81)
	relational_expression : relational_expression . LESS_EQ bool_expression  (82)

	GTR  shift 114
	LESS  shift 115
	GTR_EQ  shift 116
	LESS_EQ  shift 117
	RPAREN  reduce 75
	DBL_EQ  reduce 75
	NOT_EQ  reduce 75
	OR  reduce 75
	AND  reduce 75
	COMMA  reduce 75
	SEMICOLON  reduce 75
	RBRACE  reduce 75


state 74
	relational_expression : bool_expression .  (78)

	.  reduce 78


state 75
	arithmetic_expression : arithmetic_factor .  (85)
	arithmetic_factor : arithmetic_factor . STAR arithmetic_unary  (89)
	arithmetic_factor : arithmetic_factor . SLASH arithmetic_unary  (90)

	STAR  shift 118
	SLASH  shift 119
	PLUS  reduce 85
	MINUS  reduce 85
	RPAREN  reduce 85
	GTR  reduce 85
	LESS  reduce 85
	GTR_EQ  reduce 85
	LESS_EQ  reduce 85
	DBL_EQ  reduce 85
	NOT_EQ  reduce 85
	OR  reduce 85
	AND  reduce 85
	COMMA  reduce 85
	SEMICOLON  reduce 85
	RBRACE  reduce 85
	RBRACKET  reduce 85


state 76
	arithmetic_factor : arithmetic_unary .  (88)

	.  reduce 88


state 77
	arithmetic_unary : unit .  (91)

	.  reduce 91


state 78
	unit : integer_value .  (96)

	.  reduce 96


state 79
	unit : char_value .  (97)

	.  reduce 97


state 80
	unit : bool_value .  (98)

	.  reduce 98


state 81
	unit : array_accessor_unit .  (100)

	.  reduce 100


state 82
	unit : dereferenced_pointer .  (102)

	.  reduce 102


state 83
	unit : array_value .  (103)

	.  reduce 103


state 84
	array_value : array_initializer .  (107)

	.  reduce 107


state 85
	function_definition_statement : any_type IDENTIFIER LPAREN . formal_parameter_list RPAREN block_statement  (46)
	formal_parameter_list : .  (62)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	LIGHT_ACTUATOR  shift 6
	SERVO_ACTUATOR  shift 7
	SOUND_SENSOR  shift 8
	LIGHT_SENSOR  shift 9
	DISTANCE_SENSOR  shift 10
	TEMPERATURE_SENSOR  shift 11
	SERIAL_SENSOR  shift 14
	SERIAL_ACTUATOR  shift 15
	BYTE  shift 16
	RPAREN  reduce 62

	type_declarator  goto 120
	any_type  goto 35
	array_type  goto 27
	pointer_type  goto 28
	primitive_type  goto 29
	user_type  goto 30
	device_type  goto 31
	formal_parameter_list  goto 121


state 86
	array_type : any_type LBRACKET arithmetic_expression . RBRACKET  (29)
	arithmetic_expression : arithmetic_expression . PLUS arithmetic_factor  (86)
	arithmetic_expression : arithmetic_expression . MINUS arithmetic_factor  (87)

	PLUS  shift 106
	MINUS  shift 107
	RBRACKET  shift 122
	.  error


state 87
	class_attribute : function_definition_statement .  (44)

	.  reduce 44


state 88
	class_attribute : variable_declaration_statement .  (45)

	.  reduce 45


state 89
	variable_declaration_statement : type_declarator . SEMICOLON  (33)

	SEMICOLON  shift 39
	.  error


state 90
	class_body : LBRACE class_attribute_list . RBRACE  (41)

	RBRACE  shift 123
	.  error


state 91
	class_attribute_list : class_attribute .  (42)
	class_attribute_list : class_attribute . class_attribute_list  (43)

	IDENTIFIER  shift 1
	BOOL  shift 2
	INT  shift 3
	CHAR  shift 4
	VOID  shift 5
	LIGHT_ACTUATOR  shift 6
	SERVO_ACTUATOR  shift 7
	SOUND_SENSOR  shift 8
	LIGHT_SENSOR  shift 9
	DISTANCE_SENSOR  shift 10
	TEMPERATURE_SENSOR  shift 11
	SERIAL_SENSOR  shift 14
	SERIAL_ACTUATOR  shift 15
	BYTE  shift 16
	RBRACE  reduce 42

	function_definition_statement  goto 87
	variable_declaration_statement  goto 88
	type_declarator  goto 89
	any_type  goto 26
	array_type  goto 27
	pointer_type  goto 28
	primitive_type  goto 29
	user_type  goto 30
	device_type  goto 31
	class_attribute_list  goto 124
	class_attribute  goto 91


state 92
	class_extending : EXTENDS IDENTIFIER .  (40)

	.  reduce 40


state 93
	constant_definition_statement : CONSTANT type_declarator EQ expression . SEMICOLON  (35)

	SEMICOLON  shift 125
	.  error


state 94
	function_invocation : IDENTIFIER LPAREN . parameter_list RPAREN  (51)
	parameter_list : .  (65)

	IDENTIFIER  shift 49
	MINUS  shift 50
	BANG  shift 51
	LPAREN  shift 52
	LBRACE  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	ALLOCATE  shift 60
	DEREF  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	RPAREN  reduce 65

	arithmetic_expression  goto 64
	expression  goto 100
	class_attribute_identifier  goto 66
	function_invocation  goto 67
	parameter_list  goto 126
	method_invocation  goto 68
	logical_expression  goto 69
	allocation_expression  goto 70
	logical_and_expression  goto 71
	equality_expression  goto 72
	relational_expression  goto 73
	bool_expression  goto 74
	arithmetic_factor  goto 75
	arithmetic_unary  goto 76
	unit  goto 77
	integer_value  goto 78
	char_value  goto 79
	bool_value  goto 80
	array_accessor_unit  goto 81
	dereferenced_pointer  goto 82
	array_value  goto 83
	array_initializer  goto 84


state 95
	array_accessor_unit : IDENTIFIER LBRACKET . arithmetic_expression RBRACKET  (104)

	IDENTIFIER  shift 49
	MINUS  shift 50
	LPAREN  shift 52
	LBRACE  shift 53
	DECIMAL  shift 54
	OCTAL  shift 55
	HEX  shift 56
	BINARY  shift 57
	TRUE  shift 58
	FALSE  shift 59
	DEREF  shift 61
	STRING_LITERAL  shift 62
	CHAR_LITERAL  shift 63
	.  error

	arithmetic_expression  goto 127
	class_attribute_identifier  goto 66
	function_invocation  goto 67
	method_invocation  goto 68
	arithmetic_factor  goto 75
	arithmetic_unary  goto 76
	unit  goto 77
	integer_value  goto 78
	char_value  goto 79
	bool_value  goto 80
	array_accessor_unit  goto 81
	dereferenced_pointer  goto 82
	array_value  goto 83
	array_initializer  goto 84


state 96
	class_attribute_identifier : IDENTIFIER DOT . IDENTIFIER  (55)
	class_attribute_identifier : IDENTIFIER DOT . class_attribute_identifier  (56)

	IDENTIFIER  shift 128
	.  error

	class_attribute_identifier  goto 129


state 97
	arithmetic_unary : MINUS arithmetic_unary .  (92)

	.  reduce 92


state 98
	bool_expression : BANG arithmetic_expression .  (84)
	arithmetic_expression : arithmetic_expression . PLUS arithmetic_factor  (86)
	arithmetic_expression : arithmetic_expression . MINUS arithmetic_factor  (87)

	PLUS  shift 106
	MINUS  shift 107
	RPAREN  reduce 84
	GTR  reduce 84
	LESS  reduce 84
	GTR_EQ  reduce 84
	LESS_EQ  reduce 84
	DBL_EQ  reduce 84
	NOT_EQ  reduce 84
	OR  reduce 84
	AND  reduce 84
	COMMA  reduce 84
	SEMICOLON  reduce 84
	RBRACE  reduce 84

